@@ -12,6 +12,8 @@ TableSelectionDiff.no.selection.for.compare.err=No data to compare to. Use the "
 
 SqlScriptPluginAccessor.scriptPluginNeeded=DBDiff Plugin missing. Get the plugin from www.squirrelsql.org. It's free.
 
-TableSelectionDiff.dialog.title=Table cells diff
+TableSelectionDiff.dialog.title=Cells selected first vs cells selected second 
+TableSelectionDiff.to.clip.dialog.title=Clipboard vs selected cells
+
 
 TableSelectionDiff.clipboard.empty.warn=Cannot compare. Clipboard is empty or contains whitespaces only.
